# evalh

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/rules/: architecture.md  coding.md  git.md  security.md  testing.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  smoke.yml
benchmarks/: README.md  distributed_1m.py
docs/: Adapters.md  Architecture.md  CI.md  CLI.md  Concurrency.md  ConfigSchema.md  DataModel.md  Evaluators.md  Executors.md  Filesystem.md  Observability.md  PRD.md  RepositoryStructure.md  Roadmap.md  Variants.md
eval_harness/: __init__.py
eval_harness/_platforms/: __init__.py  arize.py  braintrust.py  helicone.py  langfuse.py  otel.py  phoenix.py  webhook.py
eval_harness/adapters/: __init__.py
eval_harness/adapters/dataset/: __init__.py  arize_dataset_adapter.py  base.py  braintrust_dataset_adapter.py  fixture_dataset_adapter.py  helicone_dataset_adapter.py  jsonl_dataset_adapter.py  langfuse_dataset_adapter.py  phoenix_dataset_adapter.py  yaml_dataset_adapter.py
eval_harness/adapters/enricher/: __init__.py  arize_enricher.py  base.py  braintrust_enricher.py  langfuse_enricher.py  otel_enricher.py  phoenix_enricher.py
eval_harness/adapters/system/: __init__.py  base.py  cli_adapter.py  docker_adapter.py  git_branch_adapter.py  http_adapter.py  python_function_adapter.py  replay_adapter.py  user_simulator_adapter.py
eval_harness/adapters/trace/: __init__.py  arize_trace_store.py  base.py  braintrust_trace_store.py  langfuse_trace_store.py  local_files_store.py  otel_trace_store.py  phoenix_trace_store.py  postgres_store.py  sqlite_store.py  webhook_trace_store.py
eval_harness/adapters/workspace/: __init__.py  _artifact_publish.py  base.py  docker_volume_adapter.py  git_workspace_adapter.py  tempdir_snapshot_adapter.py
eval_harness/cli/: main.py
eval_harness/cli/commands/: compare.py  drift.py  inspect.py  promote.py  re_evaluate.py  run.py
eval_harness/core/: __init__.py  baseline.py  config.py  config_loader.py  errors.py  models.py  price_tables.py  registry.py  run_reader.py  time.py  url.py
eval_harness/core/executors/: __init__.py  _worker.py  _worker_main.py  base.py  celery_executor.py  k8s_executor.py  local.py  modal_executor.py  ray_executor.py
eval_harness/core/llm_backends/: __init__.py  _pricing.py  anthropic.py
eval_harness/core/object_storage/: __init__.py  base.py  fsspec_storage.py
eval_harness/evaluators/: __init__.py  base.py  command.py  contains_text.py  cost_under.py  exact_match.py  git_diff.py  latency_first_token_under.py  latency_under.py  llm_judge.py  schema_match.py  semantic_similarity.py  stream_completed.py  thinking_does_not_leak.py  thinking_present.py  thinking_tokens_under.py  tokens_per_second_above.py  tool_called.py
eval_harness/evaluators/_embedders/: __init__.py  openai.py  sentence_transformers.py
eval_harness/evaluators/_judge_backends/: __init__.py  _pricing.py  anthropic_backend.py
eval_harness/factories/: __init__.py  dataset_adapter_factory.py  evaluator_factory.py  system_adapter_factory.py  trace_enricher_factory.py  trace_store_factory.py  workspace_factory.py
eval_harness/reports/: __init__.py  comparison_writer.py  markdown_writer.py  summary_writer.py
eval_harness/runner/: __init__.py  _deltas.py  cost_accumulator.py  plan_builder.py  retry.py  run_eval.py  summary.py
examples/: README.md  plan.md
examples/coding_agent/: README.md  agent.py  cases.yaml  eval.yaml
examples/coding_agent/fixture_repo/: calc.py  test_calc.py
examples/distributed_ray/: README.md  eval.yaml
examples/listing_price/: README.md  cases.yaml  eval.yaml
examples/model_fleet/: README.md  cases.yaml  eval.yaml
examples/multi_turn_support/: README.md  agent.py  cases.yaml  eval.yaml
examples/observability_langfuse/: README.md  agent.py  cases.yaml  eval.yaml
examples/observability_langfuse/fixtures/: dataset.jsonl
examples/online_eval/: README.md  embedded_traces.yaml  eval.yaml
examples/rag_qa/: README.md  agent.py  cases.yaml  eval.yaml
examples/rag_qa/fixtures/: docs.jsonl  reference_answers.yaml
examples/regression_gate/: README.md  agent.py  eval.yaml
examples/regression_gate/baseline/: config.yaml  results.jsonl  summary.yaml  traces.jsonl
examples/slack_drift_notify/: README.md  eval.yaml
examples/streaming_chat/: README.md  agent.py  cases.yaml  eval.yaml
examples/structured_extraction/: README.md  agent.py  cases.yaml  eval.yaml
examples/structured_extraction/schemas/: invoice.schema.json
examples/text_to_sql/: README.md  agent.py  cases.yaml  compare.py  eval.yaml
examples/text_to_sql/fixtures/: db.sqlite  expected_top_spender.csv  expected_total_revenue.csv  seed.py
examples/thinking_eval/: README.md  cases.yaml  eval.yaml
examples/tiny_demo/: README.md  agent.py  cases.yaml  eval.yaml
templates/: eval-daily.yml  eval.yml
tests/: README.md  conftest.py  test_smoke.py
tests/fixtures/: k8s_stub_agent.py  ray_stub_agent.py
tests/fixtures/enrichers/: fake_enricher.py
tests/fixtures/plugin_pkg/: README.md  pyproject.toml
tests/fixtures/plugin_pkg/src/plugin_pkg/: __init__.py  sql_equivalent.py
tests/integration/: test_capacity_pools.py  test_celery_executor.py  test_coding_agent_branch_deltas.py  test_cost_limit.py  test_full_run_local_files.py  test_k8s_executor.py  test_listing_price_plans.py  test_online_eval_offline.py  test_plugin_loading.py  test_ray_executor.py  test_retry_distributed.py  test_v1s_platform_end_to_end.py  test_variant_comparison.py
tests/perf/: test_10k_case_run.py  test_local_executor_perf.py
tests/perf/baselines/: local_executor_10k.json
tests/unit/: test_adapter_protocols.py  test_baseline.py  test_cli.py  test_config.py  test_core.py  test_factories.py  test_modal_executor.py  test_object_storage.py  test_runner.py  test_runner_deltas.py  test_runner_enrichment.py  test_runner_multi_sink.py  test_runner_replay_invariants.py
tests/unit/test_adapters/: test_arize_dataset.py  test_arize_enricher.py  (+34 more)
(+39 files in other folders)
