[project]
name = "eval-harness"
version = "0.0.1"
description = "A boring, config-driven harness for evaluating AI systems."
readme = "README.md"
requires-python = ">=3.11,<4"
license = { text = "MIT" }
authors = [{ name = "Eval Harness contributors" }]
keywords = ["llm", "evaluation", "agents", "eval", "harness"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core runtime dependencies — what the runner, registry, factories, built-in
# adapters, and built-in deterministic evaluators import. Anything provider-
# specific (LLM SDKs, observability platforms, storage backends, workspace
# implementations) lives under [project.optional-dependencies] so consumers
# only pay for what they use.
dependencies = [
  "pydantic>=2.7,<3",
  "pyyaml>=6,<7",
  "httpx>=0.27,<0.28",  # respx 0.21 breaks on httpx 0.28+; revisit when respx ships compat
  "click>=8.1,<9",
  "rich>=13,<14",
  "jsonpath-ng>=1.6,<2",
  "python-dotenv>=1,<2",
  "jsonschema (>=4,<5)",
  # fsspec is the bytes-mover behind the v2 ObjectStorage abstraction.
  # Tiny + pure-Python by itself; cloud backends pull s3fs / gcsfs / adlfs
  # under the matching extra below.
  "fsspec>=2024",
]

[project.optional-dependencies]
# LLM-judge backends — install at least one to use the `llm_judge` evaluator.
# `examples/tiny_demo/` also depends on `[anthropic]` for its agent.
anthropic = ["anthropic>=0.40,<1"]
openai    = ["openai>=1.40,<2"]      # judge support lands when implemented

# Storage / workspace / observability backends.
sqlite   = ["aiosqlite>=0.20"]
postgres = ["asyncpg>=0.29"]
langfuse = ["langfuse>=2"]
# arize-phoenix-otel pins python<3.15; our package supports 3.11-3.14 so the
# marker keeps lock resolution clean. The runtime code uses httpx + OtelClient
# directly and doesn't import the SDK — this dep is for users who want the
# Phoenix OpenInference instrumentation helpers alongside our adapter.
phoenix  = ["arize-phoenix-otel>=0.6,<1 ; python_version < '3.15'"]
# Arize OTel exporter helpers. Mirrors the phoenix extra: the runtime code
# uses httpx + OtelClient directly and doesn't import the SDK — this dep
# is for users who want the Arize OpenInference instrumentation helpers
# alongside our adapter.
arize    = ["arize-otel>=0.7,<1 ; python_version < '3.15'"]
# Helicone integration is REST-only — httpx is in core, no SDK required.
# The [helicone] extra is a marker so consumers can declare intent in
# their project's lockfile and `pytest.importorskip('helicone')` can gate
# integration tests when a user wants to add live-API coverage later.
helicone = []
# Braintrust observability SDK. The runtime code wraps the SDK behind
# `eval_harness._platforms.braintrust.BraintrustClient`; importing the
# SDK is deferred to construction time so callers without the extra can
# still load the module.
braintrust = ["braintrust>=0.0.50,<1"]
# `webhook` TraceStore: Slack + Discord use plain httpx (in core); only
# Linear needs an SDK for createComment via GraphQL.
webhook  = ["linear-api>=0.2,<1"]
git      = ["pygit2>=1.15"]
docker   = ["docker>=7"]
otel     = ["opentelemetry-sdk>=1.27", "opentelemetry-exporter-otlp>=1.27"]
# Cloud backends for FsspecObjectStorage. Each pulls fsspec's
# protocol-specific package; no per-cloud code lives in eval-harness
# because fsspec already abstracts the differences.
s3       = ["s3fs>=2024"]
gcs      = ["gcsfs>=2024"]
azure    = ["adlfs>=2024"]

# Embedder backends for the `semantic_similarity` evaluator. NO default is
# shipped — pick one based on the cost/size tradeoff. `[openai]` adds an
# API-backed embedder; `[embeddings_local]` adds a small (~80MB) local model.
embeddings_local = ["sentence-transformers>=3,<6"]

all = [
  "anthropic>=0.40,<1",
  "openai>=1.40,<2",
  "aiosqlite>=0.20",
  "asyncpg>=0.29",
  "langfuse>=2",
  "arize-phoenix-otel>=0.6,<1 ; python_version < '3.15'",
  "arize-otel>=0.7,<1 ; python_version < '3.15'",
  "braintrust>=0.0.50,<1",
  "linear-api>=0.2,<1",
  "pygit2>=1.15",
  "docker>=7",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp>=1.27",
  "sentence-transformers>=3,<6",
]

[project.scripts]
evalh = "eval_harness.cli.main:cli"

# Built-in adapters and evaluators register here. Third-party extensions
# register the same way in their own pyproject.toml. See docs/Adapters.md
# and docs/Evaluators.md for the contracts.
[project.entry-points."eval_harness.system_adapters"]
http            = "eval_harness.adapters.system.http_adapter:HttpSystemAdapter"
python_function = "eval_harness.adapters.system.python_function_adapter:PythonFunctionAdapter"
cli             = "eval_harness.adapters.system.cli_adapter:CliSystemAdapter"
replay          = "eval_harness.adapters.system.replay_adapter:ReplaySystemAdapter"
git_branch      = "eval_harness.adapters.system.git_branch_adapter:GitBranchAdapter"
docker          = "eval_harness.adapters.system.docker_adapter:DockerSystemAdapter"
user_simulator  = "eval_harness.adapters.system.user_simulator_adapter:UserSimulatorSystemAdapter"

[project.entry-points."eval_harness.evaluators"]
contains_text = "eval_harness.evaluators.contains_text:ContainsTextEvaluator"
tool_called   = "eval_harness.evaluators.tool_called:ToolCalledEvaluator"
llm_judge     = "eval_harness.evaluators.llm_judge:LlmJudgeEvaluator"
exact_match   = "eval_harness.evaluators.exact_match:ExactMatchEvaluator"
schema_match  = "eval_harness.evaluators.schema_match:SchemaMatchEvaluator"
latency_under = "eval_harness.evaluators.latency_under:LatencyUnderEvaluator"
cost_under    = "eval_harness.evaluators.cost_under:CostUnderEvaluator"
git_diff      = "eval_harness.evaluators.git_diff:GitDiffEvaluator"
command       = "eval_harness.evaluators.command:CommandEvaluator"
thinking_tokens_under  = "eval_harness.evaluators.thinking_tokens_under:ThinkingTokensUnderEvaluator"
thinking_present       = "eval_harness.evaluators.thinking_present:ThinkingPresentEvaluator"
thinking_does_not_leak = "eval_harness.evaluators.thinking_does_not_leak:ThinkingDoesNotLeakEvaluator"
semantic_similarity    = "eval_harness.evaluators.semantic_similarity:SemanticSimilarityEvaluator"
latency_first_token_under = "eval_harness.evaluators.latency_first_token_under:LatencyFirstTokenUnderEvaluator"
tokens_per_second_above   = "eval_harness.evaluators.tokens_per_second_above:TokensPerSecondAboveEvaluator"
stream_completed          = "eval_harness.evaluators.stream_completed:StreamCompletedEvaluator"

[project.entry-points."eval_harness.embedders"]
"openai-text-embedding-3-small"           = "eval_harness.evaluators._embedders.openai:OpenAIEmbedder"
"sentence-transformers/all-MiniLM-L6-v2"  = "eval_harness.evaluators._embedders.sentence_transformers:SentenceTransformersEmbedder"

[project.entry-points."eval_harness.dataset_adapters"]
yaml     = "eval_harness.adapters.dataset.yaml_dataset_adapter:YamlDatasetAdapter"
jsonl    = "eval_harness.adapters.dataset.jsonl_dataset_adapter:JsonlDatasetAdapter"
fixture  = "eval_harness.adapters.dataset.fixture_dataset_adapter:FixtureDatasetAdapter"
langfuse = "eval_harness.adapters.dataset.langfuse_dataset_adapter:LangfuseDatasetAdapter"
phoenix  = "eval_harness.adapters.dataset.phoenix_dataset_adapter:PhoenixDatasetAdapter"
arize    = "eval_harness.adapters.dataset.arize_dataset_adapter:ArizeDatasetAdapter"
helicone = "eval_harness.adapters.dataset.helicone_dataset_adapter:HeliconeDatasetAdapter"
braintrust = "eval_harness.adapters.dataset.braintrust_dataset_adapter:BraintrustDatasetAdapter"

[project.entry-points."eval_harness.trace_stores"]
local_files = "eval_harness.adapters.trace.local_files_store:LocalFilesStore"
sqlite      = "eval_harness.adapters.trace.sqlite_store:SqliteStore"
postgres    = "eval_harness.adapters.trace.postgres_store:PostgresStore"
otel        = "eval_harness.adapters.trace.otel_trace_store:OtelTraceStore"
langfuse    = "eval_harness.adapters.trace.langfuse_trace_store:LangfuseTraceStore"
phoenix     = "eval_harness.adapters.trace.phoenix_trace_store:PhoenixTraceStore"
arize       = "eval_harness.adapters.trace.arize_trace_store:ArizeTraceStore"
braintrust  = "eval_harness.adapters.trace.braintrust_trace_store:BraintrustTraceStore"
webhook     = "eval_harness.adapters.trace.webhook_trace_store:WebhookTraceStore"

[project.entry-points."eval_harness.workspaces"]
tempdir_snapshot = "eval_harness.adapters.workspace.tempdir_snapshot_adapter:TempdirSnapshotAdapter"
git              = "eval_harness.adapters.workspace.git_workspace_adapter:GitWorkspaceAdapter"
docker_volume    = "eval_harness.adapters.workspace.docker_volume_adapter:DockerVolumeAdapter"

[project.entry-points."eval_harness.llm_backends"]
claude = "eval_harness.core.llm_backends.anthropic:AnthropicLlmBackend"
# Note: the legacy `eval_harness.judge_backends` entry-point group is still
# discovered at runtime for third-party plugins; their backends are wrapped to
# the `LlmBackend` interface. New code registers under `eval_harness.llm_backends`.

# v2: Executor entry-point group. The Local executor registers as `local`;
# distributed executors (Modal / K8s / Celery / Ray) register from their
# own packages in subsequent beads.
[project.entry-points."eval_harness.executors"]
local = "eval_harness.core.executors.local:LocalExecutor"

# Sixth adapter family — TraceEnricher. Built-ins ship the OTel enricher
# v1-supplement; Langfuse / Phoenix register their concrete enrichers in
# subsequent beads.
[project.entry-points."eval_harness.trace_enrichers"]
otel     = "eval_harness.adapters.enricher.otel_enricher:OtelTraceEnricher"
langfuse = "eval_harness.adapters.enricher.langfuse_enricher:LangfuseTraceEnricher"
phoenix  = "eval_harness.adapters.enricher.phoenix_enricher:PhoenixTraceEnricher"
arize    = "eval_harness.adapters.enricher.arize_enricher:ArizeTraceEnricher"
braintrust = "eval_harness.adapters.enricher.braintrust_enricher:BraintrustTraceEnricher"

# V2 foundation #3: ObjectStorage bytes-mover. Built-in: `fsspec` handles
# file:// / s3:// / gs:// / az:// / memory:// behind one class.
[project.entry-points."eval_harness.object_storages"]
fsspec = "eval_harness.core.object_storage.fsspec_storage:FsspecObjectStorage"

[project.urls]
Homepage = "https://github.com/regokan/evalh"
Issues   = "https://github.com/regokan/evalh/issues"

# ---- Poetry-specific ---------------------------------------------------------
# Poetry 2.x reads PEP 621 [project] above and only needs its own section for
# things PEP 621 doesn't cover (dev groups, package layout overrides, etc).

[tool.poetry]
packages = [{ include = "eval_harness" }]

[tool.poetry.group.dev.dependencies]
pytest         = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov     = "^5"
respx          = "^0.21"
ruff           = "^0.9"
mypy           = "^1.13"
types-pyyaml = "^6.0.12.20260510"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

# ---- Tool config -------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "integration: end-to-end tests that hit a real LLM (require ANTHROPIC_API_KEY)",
  "perf: long-running performance tests (e.g. 10K-case streaming aggregate)",
  "docker: tests that require a reachable Docker daemon (docker SystemAdapter, docker_volume workspace adapter); skipped otherwise",
  "s3: tests that require an s3-compatible backend (FsspecObjectStorage against moto / minio); skipped otherwise",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line-length warnings handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
