[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evalh-plugin-pkg"
version = "0.0.1"
description = "Tiny external plugin used by eval-harness integration tests."
requires-python = ">=3.11"
dependencies = ["eval-harness"]

[project.entry-points."eval_harness.evaluators"]
sql_equivalent = "plugin_pkg.sql_equivalent:SqlEquivalentEvaluator"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
